--- a/paper/12.0 capital deployment.Rmd
+++ b/paper/12.0 capital deployment.Rmd
@@ -3,12 +3,12 @@ In this section, we describe how high-excess insurance allows the insured to dep
 
 -   There is a fixed amount of capital, $C$, available to the firm.
 
--   The firm requires minimum capital, $C_m$, to continue as a going concern.
+-   The firm requires a minimum level of capital, $C_m$, to continue as a going concern.
 
--   We denote deployed capital, i.e., the working capital, as $C_w$.
+-   We denote deployed capital, i.e., the working capital, as $CW$.
 
 -   The firm is subject to the loss events that result in aggregate claim
-    amounts, $X$. We present distribution of claim amounts in Figure X[^1].
+    amounts, $X$. We present distribution of claim amounts in Figure \@ref(fig:Claim-Distribution)[^1].
 
     -   For simplicity, we assume information symmetry as respects $X$. That is,
         the insurer and the insured use the same distribution for $X$.
@@ -17,7 +17,7 @@ In this section, we describe how high-excess insurance allows the insured to dep
 
     -   The scale of $X$ is a function of $C_w$.
 
-    ```{r Claim Distribution, echo=FALSE, fig.height=3, fig.width=5, message=FALSE, paged.print=FALSE, fig.cap="Claim (X) Distribution"}
+    ```{r Claim-Distribution, echo=FALSE, fig.height=3, fig.width=5, message=FALSE, paged.print=FALSE, fig.cap="Claim (X) Distribution"}
     par(mar = c(2, 2, 1, 1))
     rate <- 6
     dens <- 100
@@ -35,7 +35,7 @@ In this section, we describe how high-excess insurance allows the insured to dep
     capital allocation. Its ERM strategy dictates that it can absorb a claim at
     the $p^{th}$ percentile of the distribution of $X$ which we denote as $X_p$.
 
--   The firm is able to generates a return on capital of $r_c$.
+-   The firm is able to generates a return on capital of $r_c$. For purposes of determining the value of insurance, we use a simplifying assumption that $r_c$ is fixed. That is, $E(r_c)=r_c$ and $var(r_c)=0$. 
 
 -   We denote the risk free rate $r_f$.
 
@@ -47,11 +47,7 @@ deploy capital, we compare rates of return both with and without insurance.
 
 ## Rate of Return without Insurance
 
-The firm's ERM strategy will require that it set aside a reserve in case it was
-to experience a capital depletion event that reduces. We denote this reserve as
-$C_x$, to indicate that the reserve is a seggregation of capital to absorb
-realizations of $X$ that reduce $C$ below $C_m$. We present that capital
-allocation approach in Figure X.
+The firm's ERM strategy will require that it set aside a reserve for the possibility of that it experiences a capital depletion event. We denote this reserve as $CX$, to indicate that the reserve is a segregation of capital to absorb realizations of $X$ that reduce $C$ below $C_m$. We present that capital allocation approach in Figure X.
 
 ```{r No Insurnace, echo=FALSE, fig.height=5, fig.width=6, message=FALSE, paged.print=FALSE, fig.cap="Capital Deployment"}
 par(mar = c(1, 1, 1, 1))
@@ -104,6 +100,9 @@ rect(xleft = dens_left, xright = dens_left + dens_width, ybottom = 0,
 text(x = dens_left + dens_width / 2, y = rate, 
   label = 'Claim (X) Distribution', cex = 0.7, col = 'blue', pos = 3)
 
+# scale equivalence
+lines(x = c(1.15, 1.85), y = c(rate, rate), lty = 'dashed')
+
 
 # reserve -----
 center <- 1.50
@@ -154,69 +153,62 @@ $$
 R_{0} = \dfrac{r_c \times CW_{0} + r_f \times CX_{0} - X}{C}
 $$
 
-The numerator is the sum of the return on working capital, the return on the
-reserve less the value of the claim amount. The inclusion of the random variable
-$X$ indicates that the return is a function of the realized value of the loss
-event.
+The numerator is the sum of the return on working capital and the return on the
+reserve, less the value of the claim amount. The inclusion of the random variable
+$X$ indicates that the firm's return is a function of the realized value of the loss event.
+
+We note however that  expected value of $X$ in high excess layers is nearly 0. That is, $E[X] \approx 0$. As s result, taking expectations we have:
+
+$$
+E[R_{0}] = \dfrac{r_c \times CW_{0} + r_f \times CX_{0}}{C}
+$$
 
 ## Rate of Return with Insurance
 
-If instead, the firm purchases insurance to cover a portion of loss event for a
-certain premium, using the subscript, $I$, to represent the "insurance case,"
-then the rate of return is as follows:
+The firm may alternatively elect to purchases insurance to cover a portion of loss event. We use the following notation in our rate of return equation:
+
+* $X_{ret}$ represents portion of the distribution of claims values that the
+firm retains. We allow $X_{ret}$ (i.e. to $L$) vary between 0 (equal to the no insurance case) and $X_m$ (in which case, the firm fully transfers the risk). We observe that if retention will not reduce capital below $C_m$, i.e. $0 < X_{ret} < (CW - C_m)$, then no capital need to be set aside to cover loss events, i.e., $C_x = 0$.
+
+Then, using the subscript, $I$, to represent the "insurance case," then the rate of return is as follows:
 
 $$
 R_{I} = \dfrac{r_c \times (CW_{I} - P) + r_f \times CX_{I} - X_{ret} - P}{C}
 $$
 
-where $X_{ret}$ represents portion of the distribution of claims values that the
-firm retains. We express $X_{ret}$ using the convention used to specify
-insurance policies. That convention specifies the layer as the limit of the
-insurance payment, $L$, in excess of the attachment point, $AP$ of the coverage.
-We allow $X_{ret}$ (i.e. to $L$) vary between 0 (equal to the no insurance case)
-and $X_m$ (in which case, the firm fully transfers the risk). We observe that
-for $0 < X_{ret} < (X_p - C_m)$, $C_x = 0$.
+The rational firm (where $r_c > r_f$[^2]) purchases insurance such that it need not set aside any capital. Therefore, $CX_I = 0$ and $CW_I = C - P$.
 
-$P$ is the sum of the expected loss $E[X - X_{ret}]$ and an insurance charge.
-The insurance charge contemplates the insurer for underwriting the exposure and
-provides for a return on its capital. Therefore we expect the insurance charge
-to be a function of $Var(X - X_{ret})$. However, the firm only observes premiums
-quoted under various options. As such, it is not concerned with the function the
-insurer uses to develop its risk charge.
+As we noted above that $E[X] \approx 0$, we also note that $E[X_{ret}] \approx 0$and $E[X - X_{ret}] \approx 0$. We can then simplify our rate of return equation to:
+
+$$
+E[R_{I}] = \dfrac{r_c \times (C - P) - P}{C}
+$$
+
+* We recognize that $P$ is the sum of the expected loss $E[X - X_{ret}]$ and an insurance charge. As noted, the expected loss is approximately $0$. The insurance charge compensates the insurer for underwriting the exposure and provides for a return on its capital. Therefore we expect the insurance charge to be a function of $Var(X - X_{ret})$. However, the firm only observes premiums quoted under various options. As such, it is not concerned with the function the insurer uses to develop its risk charge but it is aware that the premium is almsot entirely comprised of the risk charge.
+
 
 ## Value Creation
 
-We observe that the purchase insurance creates value when: $$
-\begin{aligned}
-R_I &> R_0 \\
-r_c \times (C-P-CX_{I}) + r_f \times CX_{I} - X_{ret} - P &> r_c \times CW_{0} + r_f \times CX_{0} - X \\
-P + X_{ret} &< r_c \times (C - P - CX_I - CW_{0}) + r_f \times (CX_{I} - CX_{0}) + X \\
-P  &< r_c \times (C - P - CX_I - CW_{0}) + r_f \times (CX_{I} - CX_{0}) + X - X_{ret}
-\end{aligned}
-$$
-
-To simplify this equation:
-
--   For the rational firm (where $r_c > r_f$[^2]) purchases insurance such that
-    it need not set aside any capital. Therefore, $CX_I = 0$ and $CW_I = C - P$.
-
--   We note that the expected value of $X$ in high excess layers is nearly 0.
-    That is, $E[X] \approx 0$ and $E[X_{ret}] \approx 0$. Moreover,
-    $E[X - X_{ret}] \approx 0$. As a result, taking expectations, our value
-    equation reduces to:
-
-[^2]: Without this condition there is no economic value to the firm's existence.
+We observe that the purchase of insurance creates value when: 
 
 $$
 \begin{aligned}
-P &< r_c \times (C - P - CW_0) + r_f \times (-CX_0)\\
-P &< r_c \times (-P) + r_c \times CX_0 + r_f \times (-CX_0)\\
-P \times (1 + r_c) &< CX_0 \times (r_c - r_f)\\
-P &< CX_0 \times \dfrac{(r_c - r_f)}{(1 + r_c)}
+E[R_I] &> E[R_0] \\
+r_c \times (C - P) - P &> r_c \times CW_{0} + r_f \times CX_{0} \\
+r_c \times C - r_c \times P - P &>  r_c \times CW_{0} + r_f \times CX_{0}\\
+-P \times (1 + r_c) &> r_c \times CW_{0} + r_f \times CX_{0} - r_c \times C\\
+-P \times (1 + r_c) &> r_c \times (CW_{0} - C) + r_f \times CX_{0}\\
+-P  &> \dfrac{r_c \times (CW_{0} - C) + r_f \times CX_{0}}{1 + r_c}\\
+-P &> \dfrac{r_c \times (CW_{0} - C) + r_f \times CX_{0}}{1 + r_c}\\
+-P &> \dfrac{r_c \times (-CX_{0}) + r_f \times CX_{0}}{1 + r_c}\\
+-P &> CX_{0} \times \dfrac{r_f - r_c}{1 + r_c}
+P &< CX_{0} \times \dfrac{r_c - r_f}{1 + r_c}
 \end{aligned}
 $$
-
 The equation has a straightforward intuitive interpretation that the insurance
 transaction creates value when the premium is less than the excess return on
 capital that would be earned on the reserve reduced for the return on capital if
 the premium amount were also deployed as capital.
+
+[^2]: Without this condition there is no economic value to the firm's existence.
+
