--- a/paper/12.0 capital deployment.Rmd
+++ b/paper/12.0 capital deployment.Rmd
@@ -1,5 +1,5 @@
 # Capital Deployment
-In this section, we describe how high-excess insurance allows the insured to deploy capital that it would otherwise need to set aside to weather an extreme loss event. In our review, we assume the following:
+In this section, we describe how high-excess insurance allows the insured to deploy capital that it would otherwise need to set aside to weather an extreme loss event. We present this analysis to demonstrate conceptually why a firm would find it necessary to set aside capital rather than  as a prescriptive approach for determining the amount of capital to set aside. In our review, we assume the following:
 
 -   There is a fixed amount of capital, $C$, available to the firm.
 
@@ -8,7 +8,7 @@ In this section, we describe how high-excess insurance allows the insured to dep
 -   We denote deployed capital, i.e., the working capital, as $CW$.
 
 -   The firm is subject to the loss events that result in aggregate claim
-    amounts, $X$. We present distribution of claim amounts in Figure \@ref(fig:Claim-Distribution)[^1].
+    amounts, $X$. We present distribution of claim amounts in Figure 2^[This is an illustrative claim distribution that we present to support further development of value measurement.].
 
     -   For simplicity, we assume information symmetry as respects $X$. That is,
         the insurer and the insured use the same distribution for $X$.
@@ -17,7 +17,7 @@ In this section, we describe how high-excess insurance allows the insured to dep
 
     -   The scale of $X$ is a function of $C_w$.
 
-    ```{r Claim-Distribution, echo=FALSE, fig.height=3, fig.width=5, message=FALSE, paged.print=FALSE, fig.cap="Claim (X) Distribution"}
+```{r claim-distribution, echo=FALSE, fig.cap="Illustrative Claim (X) Distribution", fig.height=3, fig.width=5, message=FALSE, paged.print=FALSE}
     par(mar = c(2, 2, 1, 1))
     rate <- 6
     dens <- 100
@@ -35,17 +35,15 @@ In this section, we describe how high-excess insurance allows the insured to dep
     capital allocation. Its ERM strategy dictates that it can absorb a claim at
     the $p^{th}$ percentile of the distribution of $X$ which we denote as $X_p$.
 
--   The firm is able to generates a return on capital of $r_c$. For purposes of determining the value of insurance, we use a simplifying assumption that $r_c$ is fixed. That is, $E(r_c)=r_c$ and $var(r_c)=0$. 
+-   The firm is able to generates a return on capital of $r_c$. For purposes of determining the value of insurance, we use a simplifying assumption that $r_c$ is fixed. That is, $E(r_c)=r_c$ and $Var(r_c)=0$. 
 
 -   We denote the risk free rate $r_f$.
 
-[^1]: This is an illustrative claim distribution that we present to support
-    further development of value measurement.
-
-In order to measure of the value of insurance related to the firm's ability to
-deploy capital, we compare rates of return both with and without insurance.
+In order to measure of the value of insurance related to the firm's ability to deploy capital, we compare rates of return both with and without insurance.
 
 ## Rate of Return without Insurance
+
+When a firm retains risk, it must allocate capital for that risk. The firm may allocate that capital with or without a formal analysis as to the amount of capital that it must set aside. In this section, we present an example of actions that a firm with an ERM strategy may take when faced with risk.  We recognize that not all firms will allocate capital using this type of analysis. 
 
 The firm's ERM strategy will require that it set aside a reserve for the possibility of that it experiences a capital depletion event. We denote this reserve as $CX$, to indicate that the reserve is a segregation of capital to absorb realizations of $X$ that reduce $C$ below $C_m$. We present that capital allocation approach in Figure X.
 
@@ -149,9 +147,9 @@ text(x = center, y = 1.05 * scale, label = 'Available Capital', cex = 0.7)
 Using the naught subscript to represent this base case, the rate of return is
 then as follows:
 
-$$
+\begin{equation}
 R_{0} = \dfrac{r_c \times CW_{0} + r_f \times CX_{0} - X}{C}
-$$
+\end{equation}
 
 The numerator is the sum of the return on working capital and the return on the
 reserve, less the value of the claim amount. The inclusion of the random variable
@@ -159,9 +157,9 @@ $X$ indicates that the firm's return is a function of the realized value of the 
 
 We note however that  expected value of $X$ in high excess layers is nearly 0. That is, $E[X] \approx 0$. As s result, taking expectations we have:
 
-$$
+\begin{equation}
 E[R_{0}] = \dfrac{r_c \times CW_{0} + r_f \times CX_{0}}{C}
-$$
+\end{equation}
 
 ## Rate of Return with Insurance
 
@@ -172,17 +170,17 @@ firm retains. We allow $X_{ret}$ (i.e. to $L$) vary between 0 (equal to the no i
 
 Then, using the subscript, $I$, to represent the "insurance case," then the rate of return is as follows:
 
-$$
+\begin{equation}
 R_{I} = \dfrac{r_c \times (CW_{I} - P) + r_f \times CX_{I} - X_{ret} - P}{C}
-$$
+\end{equation}
 
 The rational firm (where $r_c > r_f$[^2]) purchases insurance such that it need not set aside any capital. Therefore, $CX_I = 0$ and $CW_I = C - P$.
 
-As we noted above that $E[X] \approx 0$, we also note that $E[X_{ret}] \approx 0$and $E[X - X_{ret}] \approx 0$. We can then simplify our rate of return equation to:
+As we noted above that $E[X] \approx 0$, we also note that $E[X_{ret}] \approx 0$ and $E[X - X_{ret}] \approx 0$. We can then simplify our rate of return equation to:
 
-$$
+\begin{equation}
 E[R_{I}] = \dfrac{r_c \times (C - P) - P}{C}
-$$
+\end{equation}
 
 * We recognize that $P$ is the sum of the expected loss $E[X - X_{ret}]$ and an insurance charge. As noted, the expected loss is approximately $0$. The insurance charge compensates the insurer for underwriting the exposure and provides for a return on its capital. Therefore we expect the insurance charge to be a function of $Var(X - X_{ret})$. However, the firm only observes premiums quoted under various options. As such, it is not concerned with the function the insurer uses to develop its risk charge but it is aware that the premium is almsot entirely comprised of the risk charge.
 
@@ -191,24 +189,20 @@ $$
 
 We observe that the purchase of insurance creates value when: 
 
-$$
-\begin{aligned}
-E[R_I] &> E[R_0] \\
-r_c \times (C - P) - P &> r_c \times CW_{0} + r_f \times CX_{0} \\
-r_c \times C - r_c \times P - P &>  r_c \times CW_{0} + r_f \times CX_{0}\\
--P \times (1 + r_c) &> r_c \times CW_{0} + r_f \times CX_{0} - r_c \times C\\
--P \times (1 + r_c) &> r_c \times (CW_{0} - C) + r_f \times CX_{0}\\
--P  &> \dfrac{r_c \times (CW_{0} - C) + r_f \times CX_{0}}{1 + r_c}\\
--P &> \dfrac{r_c \times (CW_{0} - C) + r_f \times CX_{0}}{1 + r_c}\\
--P &> \dfrac{r_c \times (-CX_{0}) + r_f \times CX_{0}}{1 + r_c}\\
--P &> CX_{0} \times \dfrac{r_f - r_c}{1 + r_c}
+\begin{align}
+\nonumber E[R_I] &> E[R_0] \\
+\nonumber r_c \times (C - P) - P &> r_c \times CW_{0} + r_f \times CX_{0} \\
+\nonumber r_c \times C - r_c \times P - P &>  r_c \times CW_{0} + r_f \times CX_{0}\\
+\nonumber -P \times (1 + r_c) &> r_c \times CW_{0} + r_f \times CX_{0} - r_c \times C\\
+\nonumber -P \times (1 + r_c) &> r_c \times (CW_{0} - C) + r_f \times CX_{0}\\
+\nonumber -P  &> \dfrac{r_c \times (CW_{0} - C) + r_f \times CX_{0}}{1 + r_c}\\
+\nonumber -P &> \dfrac{r_c \times (CW_{0} - C) + r_f \times CX_{0}}{1 + r_c}\\
+\nonumber -P &> \dfrac{r_c \times (-CX_{0}) + r_f \times CX_{0}}{1 + r_c}\\
+\nonumber -P &> CX_{0} \times \dfrac{r_f - r_c}{1 + r_c}\\
 P &< CX_{0} \times \dfrac{r_c - r_f}{1 + r_c}
-\end{aligned}
-$$
-The equation has a straightforward intuitive interpretation that the insurance
-transaction creates value when the premium is less than the excess return on
-capital that would be earned on the reserve reduced for the return on capital if
-the premium amount were also deployed as capital.
+\end{align}
+
+The equation has a straightforward intuitive interpretation that the insurance transaction creates value when the premium is less than the excess return on capital that would be earned on the reserve reduced for the return on capital if the premium amount were also deployed as capital.
 
 [^2]: Without this condition there is no economic value to the firm's existence.
 
